Fix elephant in onboarding modal being very small sized on small devices

--- a/app/javascript/styles/components.scss
+++ b/app/javascript/styles/components.scss
@@ -3157,6 +3157,7 @@ button.icon-button.active i.fa-retweet {
 @media screen and (max-width: 400px) {
   .onboarding-modal__page-one {
     flex-direction: column;
+    align-items: normal;
   }
 
   .onboarding-modal__page-one__elephant-friend {
